--- a/src/pages/books.astro
+++ b/src/pages/books.astro
@@ -195,6 +195,13 @@ const books = await fetchAllRaindrops();
           Later I’ll add live stats here: genre counts, listening hours, favorite authors, and
           graphs powered by my Google Sheets logs.
         </p>
+
+        <p>
+          Hover over any book cover and you'll be greeted with this structure:
+          Date Finished · Title · Author · Year Published · Genre · Subgenre · Form · Language · Country · Length
+          Click on a book cover to get these details on mobile. Double click on an image to be taken to the Goodreads for that book.
+        </p>
+
       </section>
     </div>
 
