--- a/src/pages/books.astro
+++ b/src/pages/books.astro
@@ -191,15 +191,15 @@ const books = await fetchAllRaindrops();
           woven into everyday life.
         </p>
 
-        <p>
-          Later I’ll add live stats here: genre counts, listening hours, favorite authors, and
-          graphs powered by my Google Sheets logs.
-        </p>
-
+        <h2>Notes</h2>
         <p>
           Hover over any book cover and you'll be greeted with this structure:
-          Date Finished · Title · Author · Year Published · Genre · Subgenre · Form · Language · Country · Length
+
+          </strong>Date Finished · Title · Author · Year Published · Genre · Subgenre · Form · Language · Country · Length</strong>
+
           Click on a book cover to get these details on mobile. Double click on an image to be taken to the Goodreads for that book.
+
+          Later I’ll add live stats here: genre counts, listening hours, favorite authors, and graphs powered by my Google Sheets logs.
         </p>
 
       </section>
