--- a/src/pages/books.astro
+++ b/src/pages/books.astro
@@ -199,8 +199,7 @@ const books = await fetchAllRaindrops();
       </p>
       
       <p>
-        Click on a book cover to get these details on mobile.<br />
-        Double-tap on an image to be taken to the Goodreads page for that book.
+        Click on a book cover to get these details on mobile. Double-tap on an image to be taken to the Goodreads page for that book.
       </p>
       
       <p>
